--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+    <div class="text-center">
+        <h1>Welcome to HabitPulse</h1>
+        <%= link_to "Go to HabitPulse", habits_path, class: "btn btn-primary"%>
+    </div>
+</div>
 
