--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,13 @@
 .left {
     color:red;
 }
+
+.profile-image-placeholder {
+    width: 100px; /* Adjust size as needed */
+    height: 100px; /* Adjust size as needed */
+    background-color: #ccc; /* Placeholder background color */
+    border-radius: 50%; /* Make it circular */
+    border: 2px solid #999; /* Optional: border for the circle */
+    margin-bottom: 10px; /* Optional: adjust spacing */
+}
+  
