--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
+<!-- app/views/pages/home.html.erb -->
+<h1>Welcome to Habit Pulse</h1>
+<p>This innovative app is designed to help you organize your habits and achieve success in every area of your life</p>
 
 
