--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,12 @@
           <li class="nav-item">
             <%= link_to  "Today's Habits", habits_path, class: "nav-link"  %>
           </li>
+           <li class="nav-item">
+            <%= link_to  "Contact", habits_path, class: "nav-link"  %>
+          </li>
+           <li class="nav-item">
+            <%= link_to  "About us", habits_path, class: "nav-link"  %>
+          </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
