--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,11 @@
           <p>Your progress: 744/744</p>
           <p>Completion rate: 🏆</p>
           <div class="mt-3">
-            <button type="button">Create a habit</button>
+            <%= link_to "Create a habit", new_habit_path, class: "btn btn-outline-primary" %>
           </div>
           <div class="mt-3">
             <button type="button">View habits</button>
-          </div>   
+          </div>
           <div class="mt-3">
             <p>share↗️</p>
           </div>
