--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,4 +23,4 @@
     border: 2px solid #999; /* Optional: border for the circle */
     margin-bottom: 10px; /* Optional: adjust spacing */
 }
-  
+@import 'navbar';
