--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+
+    <%= link_to root_path, class: "btn btn-primary home-button" do %>
+      HabitPulse
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,12 +18,6 @@
           <li class="nav-item">
             <%= link_to  "Today's Habits", habits_path, class: "nav-link"  %>
           </li>
-           <li class="nav-item">
-            <%= link_to  "Contact", habits_path, class: "nav-link"  %>
-          </li>
-           <li class="nav-item">
-            <%= link_to  "About us", habits_path, class: "nav-link"  %>
-          </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
@@ -36,7 +31,13 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Login", new_user_session_path, class: "btn btn-outline-dark nav-button" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to  "About us", about_path, class: "btn btn-outline-success nav-button"  %>
+          </li>
+          <li class="nav-item">
+            <%= link_to  "Contact", contact_path, class: "btn btn-primary nav-button nav-button"  %>
           </li>
         <% end %>
       </ul>
