--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <%= link_to "Create a habit", new_habit_path, class: "btn btn-outline-primary" %>
           </div>
           <div class="mt-3">
-            <button type="button">View habits</button>
+            <%= link_to "View habits", habits_path, class: "btn btn-outline-primary" %>
           </div>
           <div class="mt-3">
             <p>share↗️</p>
