--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,12 +1,16 @@
 <div class="container mt-5">
   <div class="row">
-    <% Habit.all.each do |habit| %>
+    <% @habits.each do |habit| %>
       <div class="col-12 mb-3">
         <div class="card border-0 shadow-sm" id="habit-<%= habit.id %>">
           <div class="card-body d-flex align-items-center justify-content-between">
             <h5 class="card-title mb-1"><%= habit.name %></h5>
             <div class="d-flex align-items-center">
-              <button class="btn btn-outline-primary complete-btn mr-2" data-habit-id="<%= habit.id %>">Complete</button>
+               <% if habit.today_occurrence.completion_status == 'completed' %>
+                <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
+              <% elsif habit.today_occurrence.completion_status == 'pending' %>
+                <button class="btn btn-outline-primary complete-btn mr-2" data-habit-id="<%= habit.id %>">Complete</button>
+              <% end %>
               <div class="dropdown">
                 <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton<%= habit.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="bi bi-three-dots"></i>
