--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container mt-5">
+  <h2 class="mb-4">Today's Habits</h2>
   <div class="row">
     <% @habits.each do |habit| %>
       <div class="col-12 mb-3">
         <div class="card border-0 shadow-sm" id="habit-<%= habit.id %>">
           <div class="card-body d-flex align-items-center justify-content-between">
-            <h5 class="card-title mb-1"><%= habit.name %></h5>
+
+            <%= link_to habit.name, habit_static_path(habit.habit_static), class: "text-dark text-decoration-none fs-5" %>
             <div class="d-flex align-items-center">
                <% if habit.today_occurrence.completion_status == 'completed' %>
                 <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
