feat: add return in habit_static show

--- a/app/views/habit_statics/show.html.erb
+++ b/app/views/habit_statics/show.html.erb
@@ -32,4 +32,7 @@
    </strong>
    </h3>
 </div>
+<div class="text-end">
+  <%= link_to "Return", habits_path, class: "btn btn-outline-primary mt-5" %>
+</div>
 <% end %>
