--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -1,22 +1,36 @@
+<div>
+  <div>
+    <div>
+      <h2>Create a habit</h2>
+      <%= Time.now.strftime("%d %b %Y") %>
 
+      <%= simple_form_for(@habit, html: { novalidate: true }) do |f| %>
 
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-sm-8">
-      <h2>New Habit</h2>
-      <%= simple_form_for(@habit) do |f| %>
-      <div class="form-inputs">
-          <%= f.input :name %>
-          <%= f.input :priority, collection: [1,2,3] %>
-
-          <%= f.input :reminder %>
-
-          <%= f.input :category, collection: Habit::CATEGORIES  %>
-          <%= f.input :days_of_week %>
+        <div> 
+          <%= f.label :name, 'Habit' %>
+          <%= f.input :name, label: false, required: true %>
+          <%= f.input :category, collection: Habit::CATEGORIES %>
+          
+          <div>
+            <label for="frequency">Frequency</label>
+            <div id="frequency-options">
+              <% ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'].each do |day| %>
+                <div>
+                  <%= check_box_tag 'habit[days][]', day, false, id: "checkbox_#{day.downcase}" %>
+                  <label for="checkbox_<%= day.downcase %>"><%= day %></label>
+                </div>
+              <% end %>
+            </div>
+          </div>
+          
+          <%= f.input :reminder, label: 'Reminder' %>
+          <%= f.input :description, label: 'Description', as: :text, placeholder: 'Enter a description of the habit', required: false %>
         </div>
-        <div class="form-actions">
-          <%= f.submit  class: 'btn btn-primary'  %>
+
+        <div>
+          <%= f.submit 'Create Habit' %>
         </div>
+
       <% end %>
     </div>
   </div>
