selected each element by giving them a class and changing their color in the scss file. This is just the first step to designing and creating everything further

--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -1,3 +1,35 @@
 .create-form-container {
     background-color: lightblue;
 }
+
+.create-habit {
+    color: green; // working 
+}
+
+.date-display {
+    color:purple; // working 
+}
+
+.habit-label {
+    color:yellow; // working 
+}
+
+.category-label {
+    color: rgb(128, 4, 25); // working 
+}
+
+.frequency {
+    color:red; // working 
+}
+
+.reminder-label {
+    color: bisque; // working
+}
+
+.description-label {
+    color: aquamarine;
+}
+
+.habit-btn {
+    background-color: blue;
+}
