--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -1,18 +1,18 @@
 <div class="create-form-container">
   <h2 class="create-habit">Create a habit</h2>
-  <span class="date-display"><%= Time.now.strftime("%d %b %Y") %></span>
+  <span class="date-display"><%= Time.now.strftime("< %d %b %Y >") %></span>
 
   <%= simple_form_for(@habit, html: { novalidate: true }) do |f| %>
 
   <div> 
-  <%= f.label :name, 'Habit', class: "habit-label" %>
+  <%= f.label :name, 'Habit', class: "habit-label-field" %>
     <%= f.input :name, label: false, required: true %>  
-    <span class="category-label">
+    <span class="habit-label-field">
       <%= f.input :category, collection: Habit::CATEGORIES %>
     </span>
 
     <div>
-      <label for="frequency" class="frequency">Frequency</label>
+      <label for="frequency" class="habit-label-field">Frequency</label>
       <div id="frequency-options">
         <% ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'].each do |day| %>
           <div>
@@ -23,18 +23,21 @@
       </div>
     </div>
         
-    <span class="reminder-label">
+    <span class="habit-label-field">
       <%= f.input :reminder, label: 'Reminder' %>
     </span>
 
-    <span class="description-label">
+    <span class="habit-label-field">
       <%= f.input :description, label: 'Description', as: :text, placeholder: 'Enter a description of the habit', required: false %>
     </span>
 
   </div>
 
   <div>
-    <%= f.submit 'Create Habit', class: 'habit-btn' %>
+    <%= f.submit 'submit', class: 'submit-btn' %>
+  </div>
+  <div>
+    <%= f.submit 'cancel', class: 'cancel-btn' %>
   </div>
 
 <% end %>
