Added today's habits feature

--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,3 +1,6 @@
+<h1>Today's habits</h1>
+
+
 <% Habit.all.each do |habit| %>
   <div id="habit-<%= habit.id %>">
     <p>Name: <%= habit.name %></p>
@@ -5,4 +8,3 @@
     <button class="complete-btn" data-habit-id="<%= habit.id %>">Complete</button>
   </div>
 <% end %>
-
