here is the navbar and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,3 +41,38 @@
   </div>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Website with Footer</title>
+  <link rel="stylesheet" href="css/navbar.css"> <!-- Ensure the correct path to the CSS file -->
+  <link rel="stylesheet" href="css/footer.css"> <!-- Ensure the correct path to the footer CSS file -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- FontAwesome CSS -->
+</head>
+<body>
+  <nav>
+  </nav>
+
+  <div class="content">
+    <!-- Content goes here -->
+  </div>
+
+  <footer>
+    <div class="footer-content">
+      <p>&copy; 2024 HabitPulse. All rights reserved.</p>
+      <div class="social-media">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/js/all.min.js"></script> <!-- Ensure the correct path to FontAwesome JS -->
+</body>
+</html>
+
