--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -9,12 +9,12 @@
 
       <div class="habit-label-input">
         <%= f.label :name, 'Habit', class: "habit-label-field" %>
-        <%= f.input :name, label: false, required: true, input_html: { class: "bg-lavender" } %>
+        <%= f.input :name, label: false, required: true %>
       </div>
                 
       <div class="category-label-input">
         <%= f.label :category, 'Category', class: "habit-label-field"  %>
-        <%= f.input :category, collection: Habit::CATEGORIES, label: false, input_html: { class: "bg-lavender" } %>
+        <%= f.input :category, collection: Habit::CATEGORIES, label: false %>
       </div>
 
       <div class="frequency-container">
@@ -31,12 +31,12 @@
             
       <div class="reminder-label-input">
         <%= f.label :reminder, 'Reminder', class: "habit-label-field" %>
-        <%= f.input :reminder, label: false, input_html: { class: "reminder-lavender" }  %>
+        <%= f.input :reminder, label: false %>
       </div>
 
       <div class="description-label-input">
         <%= f.label :description, 'Description', class: "habit-label-field" %>
-        <%= f.input :description, label: false, as: :text, placeholder: 'Visit the gym for a workout session', required: false, input_html: { class: "bg-lavender" }  %>
+        <%= f.input :description, label: false, as: :text,required: false %>
       </div>
 
     </div>
@@ -45,7 +45,7 @@
 
     <%= f.submit 'submit', class: 'submit' %>
     <%= f.submit 'cancel', class: 'cancel' %>   
-
+  
   <% end %>
 
 </div>
