--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -69,11 +69,11 @@
 }
 
 .bg-lavender  {
-    background-color: #F3F1FF; 
+    background-color: #F3F1FF;
 }
 
 .reminder-lavender {
-    background-color: #F3F1FF; 
+    background-color: #F3F1FF;
 }
 
 .plus {
@@ -82,10 +82,16 @@
 
 .submit {
     background-color:red;
+    border-radius: 2rem;
+    color: white;
+    box-shadow: var(--bs-box-shadow);
+    line-height: 2;
+    font-weight: bold;
 }
 
 input, select {
     box-sizing: border-box
+
 }
 
 .category-input {
