--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -11,7 +11,7 @@
         <%= f.label :name, 'Habit', class: "habit-label-field" %>
         <%= f.input :name, label: false, required: true %>
       </div>
-                
+
       <div class="category-label-input">
         <%= f.label :category, 'Category', class: "habit-label-field"  %>
         <%= f.input :category, collection: Habit::CATEGORIES, label: false %>
@@ -28,7 +28,7 @@
           <% end %>
         </div>
       </div>
-            
+
       <div class="reminder-label-input">
         <%= f.label :reminder, 'Reminder', class: "habit-label-field" %>
         <%= f.input :reminder, label: false %>
@@ -43,9 +43,9 @@
 
 
 
-    <%= f.submit 'submit', class: 'submit' %>
-    <%= f.submit 'cancel', class: 'cancel' %>   
-  
+    <%= f.submit 'submit', class: 'submit btn btn-danger px-5' %>
+    <%= f.submit 'cancel', class: 'cancel' %>
+
   <% end %>
 
 </div>
