--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -20,10 +20,11 @@ $warning:    $orange;
 
 // Buttons & inputs' radius
 $border-radius-sm:            .0625rem;
-$border-radius:               2rem;
+$border-radius:               .125rem;
 $border-radius-lg:            .25rem;
 $border-radius-xl:            .5rem;
 $border-radius-xxl:           1rem;
+$btn-border-radius:           2rem;
 
 // Override other variables below!
 
