fix: style username

--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -12,7 +12,8 @@
     color: $body-color;
   }
   .username{
-    opacity: .7;
+    opacity: 1;
+    font-weight: 400;
   }
   .btn{
     line-height: 2.5;
