--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Today's habits</h1>
 
+<%= form_tag filter_by_date_habits_path, method: :get do %>
+  <div>
+    <label for="date">Select Date:</label>
+    <%= date_field_tag :date, params[:date] %>
+    <%= submit_tag 'Filter' %>
+  </div>
+<% end %>
 
 <% Habit.all.each do |habit| %>
   <div id="habit-<%= habit.id %>">
