fix: remove sidenav from landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="row">
     <%# if user not logged in hide sidebar %>
 
-      <div class="col-md-3" >
+      <div class="col-md-3" <%= 'hidden' unless user_signed_in? %> >
         <div class="sidebar d-flex flex-column align-items-center  side-nav">
 
           <div class="container-avatar">
@@ -30,10 +30,8 @@
           </div>
 
           <% if current_user %>
-
-
-          <div class="mb-5 mt-3 username"><%= "#{current_user.first_name } #{current_user.last_name}"%></div>
-<% end %>
+            <div class="mb-5 mt-3 username"><%= "#{current_user.first_name } #{current_user.last_name}"%></div>
+          <% end %>
           <p><span class="label">Your progress: </span><span class="user-progress">744/744</span></p>
           <p><span class="label">Completion rate:</span> <span>100% 🏆</span></p>
           <div class="mt-5">
@@ -45,7 +43,7 @@
 
         </div>
       </div>
-      <main class="col-md-9">
+      <main class="<%= current_user ? 'col-md-9' : 'col-md-12' %>">
         <%= yield %>
         <%= turbo_frame_tag "remote_modal", target: "_top" %>
       </main>
