feat: style create form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,4 +37,20 @@
 .btn {
 
   border-width: 3px;
+  line-height: 2;
+  min-width: 173px;
+}
+.form-control, .form-select {
+
+  background-color: #C6CAED;
+    border-radius: 2rem;
+    line-height: 2;
+
+    font-weight: 400;
+    font-size: 1.2rem;
+    opacity: 0.9;
+    &:focus {
+      background-color: #C6CAED;
+    }
+
 }
