--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -5,11 +5,11 @@
 
   <%= simple_form_for(@habit, html: { novalidate: true }) do |f| %>
 
-    <div class="breakpoint">
+    <div class="breakpoint ">
 
-      <div class="habit-label-input">
-        <%= f.label :name, 'Habit', class: "habit-label-field" %>
-        <%= f.input :name, label: false, required: true %>
+      <div class="habit-label-input row">
+        <%= f.label :name, 'Habit', class: "habit-label-field col-2" %>
+        <%= f.input :name, label: false, required: true, class: "col-10" %>
       </div>
 
       <div class="category-label-input">
@@ -29,22 +29,23 @@
         </div>
       </div>
 
-      <div class="reminder-label-input">
+      <div class="reminder-label-input mt-3">
         <%= f.label :reminder, 'Reminder', class: "habit-label-field" %>
-        <%= f.input :reminder, label: false %>
+        <%= f.input :reminder, as: :time, label: false %>
       </div>
 
       <div class="description-label-input">
         <%= f.label :description, 'Description', class: "habit-label-field" %>
         <%= f.input :description, label: false, as: :text,required: false %>
       </div>
+      <%= f.submit 'submit', class: 'btn btn-primary mt-3' %>
+      <%= f.submit 'cancel', class: 'btn btn-light' %>
 
     </div>
 
 
 
-    <%= f.submit 'submit', class: 'submit btn btn-danger px-5' %>
-    <%= f.submit 'cancel', class: 'cancel' %>
+
 
   <% end %>
 
