--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -97,3 +97,16 @@ input, select {
 .category-input {
     background: red;
 }
+
+.btn-flat {
+    color: white;
+    padding: 8px 24px;
+    border-radius: 4px;
+    background: #670BFF;
+    transition: background 0.3s ease;
+}
+
+.btn-flat:hover {
+    background: #4D04C4;
+    color: white;
+}
