--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -43,8 +43,10 @@
 
 
 
-    <%= f.submit 'submit', class: 'submit btn btn-danger px-5' %>
-    <%= f.submit 'cancel', class: 'cancel' %>
+
+<%= f.submit 'Submit', class: 'btn btn-primary px-4 py-2 rounded' %>
+<%= f.submit 'Cancel', class: 'btn btn-secondary px-4 py-2 rounded ml-2' %>
+
 
   <% end %>
 
