--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -77,7 +77,7 @@
 }
 
 .plus {
-    color:#B900C9;
+color: #670BFF
 }
 
 .submit {
@@ -98,15 +98,3 @@ input, select {
     background: red;
 }
 
-.btn-flat {
-    color: white;
-    padding: 8px 24px;
-    border-radius: 4px;
-    background: #670BFF;
-    transition: background 0.3s ease;
-}
-
-.btn-flat:hover {
-    background: #4D04C4;
-    color: white;
-}
