--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,14 @@
           <% end %>
           <p><span class="label">Your progress: </span><span class="user-progress">744/744</span></p>
           <p><span class="label">Completion rate:</span> <span>100% 🏆</span></p>
-          <div class="mt-5">
-            <%= link_to "Create a habit", new_habit_path, class: "btn btn-primary" %>
-          </div>
-          <div class="mt-3">
-            <%= link_to "View habits", habits_path, class: "btn btn-outline-primary mt-2" %>
-          </div>
+
+<div class="mt-5">
+  <%= link_to "Create a habit", new_habit_path, class: "btn btn-primary px-4 py-2 rounded", style: "background-color: #670BFF; transition: background 0.3s ease;" %>
+</div>
+<div class="mt-3">
+  <%= link_to "View habits", habits_path, class: "btn btn-outline-primary px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
+</div>
+
 
         </div>
       </div>
