--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,5 +60,5 @@
     /* app/assets/stylesheets/application.css or your custom CSS file */
 
 body {
-  background-color: lightblue;
+  background-color: #FAFAFA;
 }
